# TrumpTweetBot

./: main.py  pyproject.toml  trump fake news.txt  trump joe biden.rtf
